--- a/.github/workflows/check_finance_readme.yml
+++ b/.github/workflows/check_finance_readme.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   check_changes:
-    if: ${{ github.event.pull_request.label.name == 'Income proposal' }}
+    if: contains(github.event.pull_request.labels.*.name, 'Income proposal')
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
