--- a/.github/workflows/check_finance_readme.yml
+++ b/.github/workflows/check_finance_readme.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   check_changes:
-    if: contains(github.event.pull_request.labels.*.name, 'Income proposal')
+    if: contains(github.event.pull_request.labels.*.name, 'Income proposal') || contains(github.event.pull_request.labels.*.name, 'Treasury proposal') || contains(github.event.pull_request.labels.*.name, 'Debit proposal')
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
