--- a/.github/workflows/file_format_check.yml
+++ b/.github/workflows/file_format_check.yml
@@ -1,4 +1,4 @@
-name: Check Management README.md Changes
+name: File format check
 
 on:
   pull_request:
@@ -19,7 +19,7 @@ jobs:
         run: |
           calendar_files=$(curl -s -H "Authorization: token ${{ secrets.GH_TOKEN }}" \
           -X GET ${{ github.api_url }}/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/files \
-          | jq -r '.[] | select(.filename | contains("calendar/") and (.status == "added" or .status == "modified")) | .filename')
+          | jq -r '.[] | select(.filename | contains("calender/") and (.status == "added" or .status == "modified")) | .filename')
 
           okr_files=$(curl -s -H "Authorization: token ${{ secrets.GH_TOKEN }}" \
           -X GET ${{ github.api_url }}/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/files \
