--- a/.github/workflows/Quaterly_report_check.yml
+++ b/.github/workflows/Quaterly_report_check.yml
@@ -19,7 +19,7 @@ jobs:
         run: |
           changed_files=$(curl -s -H "Authorization: token ${{ secrets.GH_TOKEN }}" \
           -X GET ${{ github.api_url }}/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/files \
-          | jq -r '.[] | select(.filename | contains("quarterly_reports")) | .filename')
+          | jq -r '.[] | select(.filename | contains("quaterly_reports")) | .filename')
           echo "::set-output name=CHANGED_FILES::$changed_files"
 
       - name: Check for Quarterly Reports changes
