--- a/.github/workflows/Quaterly_report_check.yml
+++ b/.github/workflows/Quaterly_report_check.yml
@@ -19,17 +19,23 @@ jobs:
         run: |
           changed_files=$(curl -s -H "Authorization: token ${{ secrets.GH_TOKEN }}" \
           -X GET ${{ github.api_url }}/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/files \
-          | jq -r '.[] | select(.filename | contains("quaterly_reports")) | .filename')
+          | jq -r '.[] | select(.filename | contains("quarterly_reports")) | .filename')
           echo "::set-output name=CHANGED_FILES::$changed_files"
 
       - name: Check for Quarterly Reports changes
         run: |
           if [ -z "${{ steps.get_changed_files.outputs.CHANGED_FILES }}" ]; then
             echo "No changes made to Quarterly Reports folder."
+            exit 1
           else
             echo "Changes detected in Quarterly Reports folder."
             while read -r file; do
               filename=$(basename "$file")
-              echo "$filename"
+              if [[ $filename =~ ^Q(1|2|3|4)_(202[0-9])\.md$ ]]; then
+                echo "$filename"
+              else
+                echo "Invalid filename format: $filename"
+                exit 1
+              fi
             done <<< "${{ steps.get_changed_files.outputs.CHANGED_FILES }}"
           fi
