--- a/.github/workflows/Quaterly_report_check.yml
+++ b/.github/workflows/Quaterly_report_check.yml
@@ -19,7 +19,7 @@ jobs:
         run: |
           changed_files=$(curl -s -H "Authorization: token ${{ secrets.GH_TOKEN }}" \
           -X GET ${{ github.api_url }}/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/files \
-          | jq -r '.[] | select(.filename | contains("quaterly_reports")) | .filename')
+          | jq -r '.[] | select(.filename | contains("quarterly_reports")) | .filename')
           echo "::set-output name=CHANGED_FILES::$changed_files"
 
       - name: Check for Quarterly Reports changes
@@ -33,7 +33,16 @@ jobs:
             current_year=$(date +"%Y")
             while read -r file; do
               filename=$(basename "$file")
-              if [[ $filename =~ ^Q$(( ($current_month - 1) / 3 + 1 ))_${current_year}\.md$ ]]; then
+              case $current_month in
+                3) quarter="Q1" ;;
+                6) quarter="Q2" ;;
+                9) quarter="Q3" ;;
+                12) quarter="Q4" ;;
+                *) echo "Invalid month: $current_month"
+                   exit 1 ;;
+              esac
+              expected_filename="$quarter"_"$current_year".md
+              if [ "$filename" == "$expected_filename" ]; then
                 echo "$filename"
               else
                 echo "Invalid filename format: $filename"
