--- a/.github/workflows/file_format_check.yml
+++ b/.github/workflows/file_format_check.yml
@@ -1,4 +1,4 @@
-name: Check File format
+name: File format check
 
 on:
   pull_request:
@@ -6,7 +6,7 @@ on:
 
 jobs:
   check_changes:
-    if: contains(github.event.pull_request.labels.*.name, 'Calendar proposal') || contains(github.event.pull_request.labels.*.name, 'OKR proposal')
+    if: contains(github.event.pull_request.labels.*.name, 'Calendar proposal') || contains(github.event.pull_request.labels.*.name, 'Calendar proposal')
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -30,7 +30,8 @@ jobs:
 
       - name: Check for Proposal Changes
         run: |
-          if [ -z "${{ steps.get_changed_files.outputs.CHANGED_FILES }}" ]; then
+          directory=$(basename "${{ steps.get_changed_files.outputs.CHANGED_FILES }}")
+          if [ -z "$directory" ]; then
             echo "No changes made to the $directory directory."
             exit 1
           else
