--- a/.github/workflows/file_format_check.yml
+++ b/.github/workflows/file_format_check.yml
@@ -1,4 +1,4 @@
-name: File format check
+name: File Format Check
 
 on:
   pull_request:
@@ -25,12 +25,12 @@ jobs:
           fi
           changed_files=$(curl -s -H "Authorization: token ${{ secrets.GH_TOKEN }}" \
           -X GET ${{ github.api_url }}/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/files \
-          | jq -r '.[] | select(.filename | contains("$directory")) | .filename')
+          | jq -r --arg directory "$directory" '.[] | select(.filename | contains($directory)) | .filename')
           echo "::set-output name=CHANGED_FILES::$changed_files"
-          
+
       - name: Check for Proposal Changes
         run: |
-          directory=$(basename "${{ steps.get_changed_files.outputs.CHANGED_FILES }}")
+          directory="${{ steps.get_changed_files.outputs.CHANGED_FILES }}"
           if [ -z "$directory" ]; then
             echo "No changes made to the $directory directory."
             exit 1
@@ -39,5 +39,5 @@ jobs:
             while read -r file; do
               filename=$(basename "$file")
               echo "$filename"
-            done <<< "${{ steps.get_changed_files.outputs.CHANGED_FILES }}"
+            done <<< "$directory"
           fi
