--- a/.github/workflows/file_format_check.yml
+++ b/.github/workflows/file_format_check.yml
@@ -25,7 +25,7 @@ jobs:
           fi
           changed_files=$(curl -s -H "Authorization: token ${{ secrets.GH_TOKEN }}" \
           -X GET ${{ github.api_url }}/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/files \
-          | jq -r --arg directory "$directory" '.[] | select(.filename | contains($directory)) | .filename')
+          | jq -r '.[] | select(.filename | contains("'"$directory"'")) | .filename')
           echo "::set-output name=CHANGED_FILES::$changed_files"
 
       - name: Check for Proposal Changes
