--- a/.github/workflows/file_format_check.yml
+++ b/.github/workflows/file_format_check.yml
@@ -24,20 +24,17 @@ jobs:
             directory="monthly_OKR"
           fi
           changed_files=$(curl -s -H "Authorization: token ${{ secrets.GH_TOKEN }}" \
-          -X GET ${{ github.api_url }}/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/files \
-          | jq -r '.[] | select(.filename | contains("'"$directory"'")) | .filename')
+          -X GET "${{ github.api_url }}/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/files" \
+          | jq -r --arg directory "$directory" '.[] | select(.filename | contains($directory)) | .filename')
           echo "::set-output name=CHANGED_FILES::$changed_files"
 
       - name: Check for Proposal Changes
         run: |
-          directory="${{ steps.get_changed_files.outputs.CHANGED_FILES }}"
-          if [ -z "$directory" ]; then
+          changed_files="${{ steps.get_changed_files.outputs.CHANGED_FILES }}"
+          if [ -z "$changed_files" ]; then
             echo "No changes made to the $directory directory."
             exit 1
           else
             echo "Changes detected in the $directory directory."
-            while read -r file; do
-              filename=$(basename "$file")
-              echo "$filename"
-            done <<< "$directory"
+            echo "$changed_files"
           fi
