--- a/.github/workflows/file_format_check.yml
+++ b/.github/workflows/file_format_check.yml
@@ -6,7 +6,6 @@ on:
 
 jobs:
   check_changes:
-    if: contains(github.event.pull_request.labels.*.name, 'Calendar proposal') || contains(github.event.pull_request.labels.*.name, 'OKR proposal')
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -53,6 +52,11 @@ jobs:
             echo "Changes detected in the $directory directory."
             while read -r file; do
               filename=$(basename "$file")
-              echo "$filename"
+              echo "Checking file: $filename"
+              current_month_year=$(date +"%m_%Y")
+              if [[ "$filename" != *"${current_month_year}.md" ]]; then
+                echo "Error: File format incorrect. Expected format: ${current_month_year}.md"
+                exit 1
+              fi
             done <<< "$changed_files"
           fi
