--- a/.github/workflows/file_format_check_TIS.yml
+++ b/.github/workflows/file_format_check_TIS.yml
@@ -30,6 +30,8 @@ jobs:
             directory="finance/treasury_proposals"
           elif [[ "$label_names" == *"Income proposal"* ]]; then
             directory="finance/income_proposals"
+          elif [[ "$label_names" == *"Salary proposal"* ]]; then
+            directory="finance/other_condition"
           fi
           echo "Directory: $directory"
           echo "::set-output name=DIRECTORY::$directory"
