--- a/.github/workflows/file_format_check_TIS.yml
+++ b/.github/workflows/file_format_check_TIS.yml
@@ -1,4 +1,4 @@
-name: File Format Check
+name: File Format Check for Treasury, Salary, Income proposals
 
 on:
   pull_request:
@@ -31,7 +31,7 @@ jobs:
           elif [[ "$label_names" == *"Income proposal"* ]]; then
             directory="finance/income_proposals"
           elif [[ "$label_names" == *"Salary proposal"* ]]; then
-            directory="finance/other_condition"
+            directory="finance/salary_proposals"
           fi
           echo "Directory: $directory"
           echo "::set-output name=DIRECTORY::$directory"
