--- a/.github/workflows/check_management_readme.yml
+++ b/.github/workflows/check_management_readme.yml
@@ -19,7 +19,7 @@ jobs:
         run: |
           changed_files=$(curl -s -H "Authorization: token ${{ secrets.GH_TOKEN }}" \
           -X GET ${{ github.api_url }}/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/files \
-          | jq -r '.[] | select(.filename | contains("./README.md")) | .filename')
+          | jq -r '.[] | select(.filename == "README.md") | .filename')
           echo "::set-output name=CHANGED_FILES::$changed_files"
 
       - name: Check for README changes
